@@ -1,11 +1,25 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(ctrlproxy, 2.7-SVN, [jelmer@vernstok.nl])
+AC_INIT(ctrlproxy, 2.7, [jelmer@vernstok.nl])
 PACKAGE=$PACKAGE_NAME
 VERSION=$PACKAGE_VERSION
 AC_DEFINE_UNQUOTED(PACKAGE,"$PACKAGE", [ Package name])
-AC_DEFINE_UNQUOTED(VERSION,"$VERSION", [ Package version])
+
+AC_MSG_CHECKING([whether this is a SVN checkout])
+if ! which svnversion >/dev/null 2>/dev/null; then
+	AC_MSG_RESULT(no)
+else 
+	REVISION="`svnversion .`"
+	if test "$REVISION" = "exported"; then
+		AC_MSG_RESULT(no)
+	else
+		AC_MSG_RESULT($REVISION)
+		SVNVERSION="-SVN-r$REVISION"
+	fi
+fi
+
+AC_DEFINE_UNQUOTED(VERSION,"$VERSION$SVNVERSION", [ Package version])
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 AC_CONFIG_SRCDIR([line.c])
